--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,7 +14,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@master
         with:
-          node-version: 10.x
+          node-version: 14.x
 
       - name: Yarn cache directory
         id: yarn-cache-dir
@@ -59,7 +59,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@master
         with:
-          node-version: 10.x
+          node-version: 14.x
 
       - name: Yarn cache directory
         id: yarn-cache-dir
@@ -95,7 +95,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: "10.x"
+          node-version: "14.x"
 
       - uses: webfactory/ssh-agent@v0.5.0
         with:
@@ -108,8 +108,8 @@ jobs:
         run: |
           cd website
 
-          git config --global user.email "kpfromer2@gmail.com"
-          git config --global user.name "Kyle Pfromer"
+          git config --global user.email "hirasawa_au@yahoo.co.jp"
+          git config --global user.name "Hirasawa Ishigawa"
 
           yarn install --frozen-lockfile
 
