--- a/package.json
+++ b/package.json
@@ -1,100 +1,106 @@
 {
-  "name": "@hirasawa_au/nestjs-typegoose",
-  "version": "8.0.0",
-  "description": "A nestjs module wrapper for typegoose",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "engines": {
-    "node": ">=14.17.3"
-  },
-  "scripts": {
-    "build": "tsc -p tsconfig.build.json",
-    "lint": "tslint --project tsconfig.json",
-    "test": "jest",
-    "test:ci": "jest",
-    "test:cov": "jest --coverage",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
-    "test:watch": "jest --watch",
-    "coverage": "yarn run test:cov && cat ./coverage/lcov.info | coveralls",
-    "prepare": "npm run build",
-    "commit": "git cz"
-  },
-  "author": "Kyle Pfromer",
-  "license": "MIT",
-  "repository": "github:hirasawaau/nestjs-typegoose",
-  "peerDependencies": {
-    "@nestjs/common": "^8.4.4",
-    "@nestjs/core": "^8.4.4",
-    "@typegoose/typegoose": "^9.7.1",
-    "mongoose": "^6.2.10"
-  },
-  "dependencies": {
-    "is-class": "^0.0.9",
-    "reflect-metadata": "^0.1.13"
-  },
-  "devDependencies": {
-    "@commitlint/cli": "9.1.2",
-    "@commitlint/config-conventional": "9.1.2",
-    "@nestjs/common": "^8.4.4",
-    "@nestjs/core": "^8.4.4",
-    "@nestjs/platform-express": "^8.4.4",
-    "@nestjs/testing": "^8.4.4",
-    "@semantic-release/changelog": "5.0.1",
-    "@semantic-release/commit-analyzer": "8.0.1",
-    "@semantic-release/git": "9.0.0",
-    "@semantic-release/npm": "7.0.5",
-    "@semantic-release/release-notes-generator": "9.0.1",
-    "@typegoose/typegoose": "^9.7.1",
-    "@types/jest": "26.0.13",
-    "@types/supertest": "2.0.10",
-    "commitizen": "4.2.1",
-    "coveralls": "3.1.0",
-    "cz-conventional-changelog": "3.3.0",
-    "husky": "4.3.0",
-    "jest": "26.4.2",
-    "mongodb-memory-server": "^8.4.2",
-    "mongoose": "^6.2.10",
-    "rxjs": "^7.5.5",
-    "semantic-release": "17.1.1",
-    "supertest": "^6.2.2",
-    "ts-jest": "26.3.0",
-    "tslint": "5.20.1",
-    "typescript": "^4.6.3"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".spec.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
+    "name": "@hirasawa_au/nestjs-typegoose",
+    "version": "8.0.0",
+    "description": "A nestjs module wrapper for typegoose",
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
+    "engines": {
+        "node": ">=14.17.3"
     },
-    "coverageDirectory": "../coverage",
-    "resetMocks": true,
-    "testEnvironment": "node"
-  },
-  "release": {
-    "plugins": [
-      "@semantic-release/commit-analyzer",
-      "@semantic-release/release-notes-generator",
-      "@semantic-release/npm",
-      "@semantic-release/changelog",
-      "@semantic-release/git"
-    ],
-    "branch": "master"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
+    "scripts": {
+        "build": "tsc -p tsconfig.build.json",
+        "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
+        "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+        "test": "jest",
+        "test:ci": "jest",
+        "test:cov": "jest --coverage",
+        "test:e2e": "jest --config ./test/jest-e2e.json",
+        "test:watch": "jest --watch",
+        "coverage": "yarn run test:cov && cat ./coverage/lcov.info | coveralls",
+        "prepare": "npm run build",
+        "commit": "git cz"
+    },
+    "author": "Kyle Pfromer",
+    "license": "MIT",
+    "repository": "github:hirasawaau/nestjs-typegoose",
+    "peerDependencies": {
+        "@nestjs/common": "^8.4.4",
+        "@nestjs/core": "^8.4.4",
+        "@typegoose/typegoose": "^9.7.1",
+        "mongoose": "^6.2.10"
+    },
+    "dependencies": {
+        "is-class": "^0.0.9",
+        "reflect-metadata": "^0.1.13"
+    },
+    "devDependencies": {
+        "@commitlint/cli": "9.1.2",
+        "@commitlint/config-conventional": "9.1.2",
+        "@nestjs/common": "^8.4.4",
+        "@nestjs/core": "^8.4.4",
+        "@nestjs/platform-express": "^8.4.4",
+        "@nestjs/testing": "^8.4.4",
+        "@semantic-release/changelog": "5.0.1",
+        "@semantic-release/commit-analyzer": "8.0.1",
+        "@semantic-release/git": "9.0.0",
+        "@semantic-release/npm": "7.0.5",
+        "@semantic-release/release-notes-generator": "9.0.1",
+        "@typegoose/typegoose": "^9.7.1",
+        "@types/jest": "26.0.13",
+        "@types/supertest": "2.0.10",
+        "@typescript-eslint/eslint-plugin": "^5.18.0",
+        "@typescript-eslint/parser": "^5.18.0",
+        "commitizen": "4.2.1",
+        "coveralls": "3.1.0",
+        "cz-conventional-changelog": "3.3.0",
+        "eslint": "^8.12.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "husky": "4.3.0",
+        "jest": "26.4.2",
+        "mongodb-memory-server": "^8.4.2",
+        "mongoose": "^6.2.10",
+        "prettier": "^2.6.2",
+        "rxjs": "^7.5.5",
+        "semantic-release": "17.1.1",
+        "supertest": "^6.2.2",
+        "ts-jest": "26.3.0",
+        "typescript": "^4.6.3"
+    },
+    "jest": {
+        "moduleFileExtensions": [
+            "js",
+            "ts"
+        ],
+        "rootDir": "src",
+        "testRegex": ".spec.ts$",
+        "transform": {
+            "^.+\\.(t|j)s$": "ts-jest"
+        },
+        "coverageDirectory": "../coverage",
+        "resetMocks": true,
+        "testEnvironment": "node"
+    },
+    "release": {
+        "plugins": [
+            "@semantic-release/commit-analyzer",
+            "@semantic-release/release-notes-generator",
+            "@semantic-release/npm",
+            "@semantic-release/changelog",
+            "@semantic-release/git"
+        ],
+        "branch": "master"
+    },
+    "config": {
+        "commitizen": {
+            "path": "./node_modules/cz-conventional-changelog"
+        }
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "yarn test",
+            "pre-push": "yarn test",
+            "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+        }
     }
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn test",
-      "pre-push": "yarn test",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
-  }
 }
